; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_microcode_core.c_collect_cpu_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_microcode_core.c_collect_cpu_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucode_cpu_info = type { i32, i32 }

@ucode_cpu_info = common dso_local global %struct.ucode_cpu_info* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @collect_cpu_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @collect_cpu_info(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ucode_cpu_info*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load %struct.ucode_cpu_info*, %struct.ucode_cpu_info** @ucode_cpu_info, align 8
  %6 = load i32, i32* %2, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds %struct.ucode_cpu_info, %struct.ucode_cpu_info* %5, i64 %7
  store %struct.ucode_cpu_info* %8, %struct.ucode_cpu_info** %3, align 8
  %9 = load %struct.ucode_cpu_info*, %struct.ucode_cpu_info** %3, align 8
  %10 = call i32 @memset(%struct.ucode_cpu_info* %9, i32 0, i32 8)
  %11 = load i32, i32* %2, align 4
  %12 = load %struct.ucode_cpu_info*, %struct.ucode_cpu_info** %3, align 8
  %13 = getelementptr inbounds %struct.ucode_cpu_info, %struct.ucode_cpu_info* %12, i32 0, i32 1
  %14 = call i32 @collect_cpu_info_on_target(i32 %11, i32* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %1
  %18 = load %struct.ucode_cpu_info*, %struct.ucode_cpu_info** %3, align 8
  %19 = getelementptr inbounds %struct.ucode_cpu_info, %struct.ucode_cpu_info* %18, i32 0, i32 0
  store i32 1, i32* %19, align 4
  br label %20

20:                                               ; preds = %17, %1
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @memset(%struct.ucode_cpu_info*, i32, i32) #1

declare dso_local i32 @collect_cpu_info_on_target(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
